# walle-core

./: .gitignore  CHANGLOG.md  Cargo.toml  README.md  license  pyproject.toml
.helix/: languages.toml
examples/: actions.rs  app_ws.rs  impl_ws.rs  model.rs
mira/: Cargo.toml  README.md
mira/src/: commands.rs  main.rs  root.rs  shell.rs
recruit/: Cargo.toml
recruit/src/: core.rs  handle.rs  main.rs
src/: action.rs  action_next.rs  action_resp.rs  ah.rs  alt.rs  app.rs  com.rs  config.rs  eh.rs  error.rs  event.rs  event_builder.rs  hooks.rs  impls.rs  lib.rs  message.rs  resp.rs  resp_next.rs  sdk.rs  segment.rs  structs.rs  utils.rs  v11.rs
src/action/: ext.rs  mod.rs
src/app/: action.rs  bot.rs  mod.rs
src/comms/: http.rs  http_webhook.rs  mod.rs  util.rs  utils.rs  websocket.rs  websocket_rev.rs  ws_util.rs  ws_utils.rs
src/comms/app/: app_ws.rs  app_ws_utils.rs  http.rs  http_webhook.rs  mod.rs  websocket.rs  websocket_rev.rs
src/comms/impls/: http.rs  http_webhook.rs  impls_ws.rs  mod.rs  websocket.rs  websocket_rev.rs
src/comms/sdk/: mod.rs  websocket.rs  websocket_rev.rs
src/database/: db_trait.rs  mod.rs
src/event/: README.md  message.rs  meta.rs  mod.rs  next.rs  notice.rs  request.rs
src/event/next/: mod.rs
src/handle/: README.md  fnt.rs  mod.rs
src/impls/: README.md  e.rs  mod.rs
src/message/: builder.rs  mod.rs  read.rs
src/message_next/: mod.rs
src/next/: mod.rs
src/next/obc/: app_http.rs  app_obc.rs  app_ws.rs  impl_http.rs  impl_obc.rs  impl_ws.rs  mod.rs
src/obc/: mod.rs  ws_util.rs
src/obc/app_obc/: app_http.rs  app_ws.rs  mod.rs
src/obc/impl_obc/: impl_http.rs  impl_ws.rs  mod.rs
src/onebot/: mod.rs
src/onebot/obc/: app_http.rs  app_obc.rs  app_ws.rs  impl_http.rs  impl_obc.rs  impl_ws.rs  mod.rs
src/test/: event.rs  mod.rs  value.rs
src/util/: alt.rs  bytes.rs  echo.rs  mod.rs  value.rs
src/util/value/: _macro.rs  _serde.rs  mod.rs
src/utils/: alt.rs  map.rs  mod.rs  value.rs
walle/: Cargo.toml  README.md
walle-actix/: Cargo.toml
walle-actix/src/: lib.rs
walle-actix/src/app/: mod.rs
walle-hub/: Cargo.toml
walle-hub/src/: bots.rs  handler.rs  main.rs  prelude.rs
walle-macro/: Cargo.toml
walle-macro/src/: action.rs  action_segment.rs  event.rs  lib.rs  value.rs
walle-py/: Cargo.toml
walle-py/py/: test.py
walle-py/src/: event.rs  extend.rs  lib.rs  message.rs
walle-py/walle/: __init__.py  walle.pyi
walle-v11/: Cargo.toml
walle-v11/examples/: app.rs
walle-v11/src/: app.rs  config.rs  error.rs  handle.rs  handler.rs  impls.rs  lib.rs  message.rs  utils.rs
walle-v11/src/action/: mod.rs  resp.rs
walle-v11/src/app/: bot.rs  mod.rs
walle-v11/src/event/: alt.rs  from.rs  mod.rs  to.rs
walle-v11/src/parse/: action.rs  error.rs  event.rs  message.rs  mod.rs
walle-v11/src/ws/: app.rs  impls.rs  mod.rs
walle/examples/: echo.rs
walle/src/: handler.rs  lib.rs  matcher.rs  plugin.rs  pre_handle.rs  rule.rs  rules.rs
walle/src/builtin/: echo.rs  layers.rs  matcher.rs  mod.rs  pre_handle.rs  rule.rs  rules.rs
walle/src/plugins/: echo.rs  mod.rs
