[package]
name = "walle-core"
version = "0.5.4"
edition = "2021"
license = "MIT"
description = "Onebot Lib in Rust"
authors = ["Abrahum<307887491@qq.com>"]
homepage = "https://github.com/abrahum/Walle-core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
http = ["hyper"]
websocket = ["tokio-tungstenite"]
app_obc = ["sha2", "tokio/fs", "tokio/io-util"]
impl_obc = ["uuid"]
full = ["http", "websocket", "app_obc", "impl_obc"]
tokio-rt = ["tokio/rt-multi-thread"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.0"
async-trait = "0.1"
tracing = "0.1"
colored = "2"
uuid = { version = "1.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1.0", features = ["sync", "net", "time", "macros", "rt"] }
tokio-tungstenite = { version = "0.17", optional = true }
futures-util = { version = "0.3", features = ["sink"] }
thiserror = "1.0"
sha2 = { version = "0.10", optional = true }

dashmap = "5.3"

base64 = "0.13"
hex = "0.4"

[dev-dependencies]
tracing-subscriber = "0.3"
toml = "*"

[[example]]
name = "impl_ws"
required-features = ["impl", "websocket", "tokio-rt"]

[[example]]
name = "app_ws"
required-features = ["app", "websocket", "tokio-rt"]

[workspace]
members = ["walle-py", "walle-v11"]
