[package]
name = "walle-core"
version = "0.7.0-a2"
edition = "2021"
license = "MIT"
description = "OneBot lib in Rust"
authors = ["Abrahum<307887491@qq.com>"]
homepage = "https://github.com/onebot-walle/Walle-core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
http = ["hyper"]
websocket = ["tokio-tungstenite"]
app-obc = ["sha2", "tokio/fs", "tokio/io-util"]
impl-obc = ["uuid"]
alt = []
full = ["http", "websocket", "app-obc", "impl-obc", "alt"]
tokio-rt = ["tokio/rt-multi-thread"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.0"
async-trait = "0.1"
tracing = "0.1"
colored = "2"
uuid = { version = "1.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1.0", features = ["sync", "net", "time", "macros", "rt"] }
tokio-tungstenite = { version = "0.17", optional = true }
futures-util = { version = "0.3", features = ["sink"] }
thiserror = "1.0"
sha2 = { version = "0.10", optional = true }
snake_cased = { version = "0.1", features = ["derive"] }

dashmap = "5.3"

base64 = "0.13"
hex = "0.4"

[dependencies.walle-macro]
# path = "./walle-macro"
version = "0.7.0-a2"

[dev-dependencies]
tracing-subscriber = "0.3"
toml = "0.5"

[[example]]
name = "impl_ws"
required-features = ["impl-obc", "websocket", "tokio-rt"]

[[example]]
name = "app_ws"
required-features = ["app-obc", "websocket", "tokio-rt"]

[workspace]
members = ["walle-macro"]
