[package]
name = "walle-core"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "OneBot lib in Rust"
authors = ["Abrahum<307887491@qq.com>"]
homepage = "https://github.com/onebot-walle/Walle-core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
http = ["hyper"]
websocket = ["tokio-tungstenite"]
app-obc = ["sha2", "tokio/fs", "tokio/io-util"]
impl-obc = ["uuid"]
alt = []
full = ["http", "websocket", "app-obc", "impl-obc", "alt"]
tokio-rt = ["tokio/rt-multi-thread"]


[dependencies]
# logging
tracing = "0.1"
colored = "2"
uuid = { version = "1.0", optional = true }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# async
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-tungstenite = { version = "0.17", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
futures-util = { version = "0.3", features = ["sink"] }

# error-handing
thiserror = "1"

uuid = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
dashmap = "5"
base64 = "0.21"
hex = "0.4"

# snake_cased = { version = "0.1", features = ["derive"] }

[dependencies.walle-macro]
# path = "./walle-macro"
version = "0.7.0-a2"

[dev-dependencies]
tracing-subscriber = { version = "0.3" , features = ["local-time"]}
toml = "0.8"

[[example]]
name = "impl_ws"
required-features = ["impl-obc", "websocket", "tokio-rt"]

[[example]]
name = "app_ws"
required-features = ["app-obc", "websocket", "tokio-rt"]

[workspace]
members = ["walle-macro"]
