[package]
name = "mira"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { path = "../.", features = ["http", "websocket", "app"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter", "fmt"] }
clap = "3.0.0-beta.5"
toml = "0.5"
