[package]
name = "mira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { path = "../.", features = ["http", "websocket", "app"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
    "fmt",
    "time",
] }
colored = "2"
clap = "3.0.0-beta.5"
toml = "0.5"
time = { version = "0.3", features = ["macros"] }
