[package]
name = "recruit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { path = "../.", features = ["http", "websocket", "impl"] }
tokio = { version = "1", features = ["full"] }
tracing = "*"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = "3.0.0-beta.5"
