[package]
name = "walle-py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "walle"
crate-type = ["cdylib"]

[dependencies]
tracing-subscriber = { version = "0.2", features = ["env-filter", "fmt"] }
walle-core = { path = "../", features = ["full"] }
pyo3-asyncio = { version = "0.14", features = ["tokio-runtime", "attributes"] }
tokio = "1.4"

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]
