[package]
name = "walle-py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "walle"
crate-type = ["cdylib"]

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walle-core = { version = "0.2.0", features = ["full"] }
walle-v11 = { version = "0.2.0" }
pyo3-asyncio = { version = "0.15", features = ["tokio-runtime", "attributes"] }
tokio = "1.4"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
