[package]
name = "walle-v11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "*"
walle-core = { path = "../" }
async-trait = "*"
