[package]
name = "walle-v11"
version = "0.4.0-beta.1"
edition = "2021"
license = "MIT"
description = "Onebot Lib in Rust"
authors = ["Abrahum<307887491@qq.com>"]
homepage = "https://github.com/abrahum/Walle-core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
tokio-rt = ["tokio/rt-multi-thread"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = "1"
tokio-tungstenite = "0.17"
futures-util = "0.3"
walle-core = { version = "0.4.0-beta.2", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
colored = "2"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "app"
crate-type = ["bin"]
required-features = ["tokio-rt"]
