[package]
name = "walle"
version = "0.1.0"
edition = "2021"
authors = ["Abrahum<307887491@qq.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { path = "../" }
async-trait = "0.1"
tokio = "1.17"

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] }
