[package]
name = "walle"
version = "0.1.0"
edition = "2021"
authors = ["Abrahum<307887491@qq.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walle-core = { path = "../", features = ["websocket", "app"] }
async-trait = "0.1"
async-recursion = "1"
tokio = "1.17"
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
    "fmt",
    "time",
] }
time = { version = "0.3", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] }
